<resources>
    <string name="app_name" translatable="false">My Anime Collection</string>
    <string name="userInputEditTextHint">Username</string>
    <string name="passwordInputEditTextHint">Password</string>
    <string name="forgotPasswordButton">Forgot your password?</string>
    <string name="loginButton">Log In</string>
    <string name="signupButton">Sign up</string>
    <string name="thirdPartySeparator">or</string>
    <string name="googleLoginButton">Log in with Google</string>
    <string name="facebookLoginButton">Log in with Facebook</string>
    <string name="cant_be_empty">Can\'t be blank</string>
    <string name="login_snackbar_text">Do you want to go to RV Action?</string>
    <string name="snackbar_goto_action_text">Go</string>
    <string name="third_party_login_snackbar_text">Do you want to go to Contact Action?</string>
    <string name="rv_activity_top_app_bar_title">RV Action</string>
    <string name="item_default_title">Title</string>
    <string name="item_fav_button_content_description">Item Favorite Button</string>
    <string name="item_default_description">Description</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="company_phone" translatable="false">968 32 13 01</string>
    <string name="company_email" translatable="false">30019702@murciaeduca.es</string>
    <string name="company_location" translatable="false">C. Carlos III, 3, 30201 Cartagena, Murcia</string>
    <string name="default_rationale_permission">Necessary permissions have been denied and thus this functionality is unavailable</string>
    <string name="default_rationale_unavailability">Feature won\'t be available since you\'ve denied the permissions</string>
    <string name="default_unable_to_resolve_activity_message">Unable to find an app that can handle this functionality</string>
    <string name="whatsapp_unable_to_resolve_activity_message">Unable to find WhatsApp app. Consider installing it</string>
    <string name="phone_rationale_permission">To call, the app needs call permissions</string>
    <string name="phone_rationale_unavailability">You\'ll be unable to make calls since you\'ve denied the call permissions</string>
    <string name="phone_unable_to_resolve_activity_message">Unable to find an app that can call</string>
    <string name="email_unable_to_resolve_activity_message">Unable to find an app that can send an email</string>
    <string name="location_rationale_permission">To view the map, the app needs coarse location permissions</string>
    <string name="location_rationale_unavailability">You\'ll be unable to view the map since you\'ve denied the coarse location permissions</string>
    <string name="location_unable_to_resolve_activity_message">Unable to find an app that can view maps</string>
    <string name="naruto_description">Naruto Uzumaki, a hyperactive and knuckle-headed ninja, lives in Konohagakure, the Hidden Leaf village. Moments prior to his birth, a huge demon known as the Kyuubi, the Nine-tailed Fox, attacked Konohagakure and wreaked havoc.</string>
    <string name="one_piece_description">Gold Roger was known as the Pirate King, the strongest and most infamous being to have sailed the Grand Line. The capture and death of Roger by the World Government brought a change throughout the world.</string>
    <string name="bleach_description">Ichigo Kurosaki is a rather normal high school student apart from the fact he has the ability to see ghosts. This ability never impacted his life in a major way until the day he encounters the Shinigami Kuchiki Rukia.</string>
    <string name="dragon_ball_description">Goku Son is a young boy who lives in the woods all alone until Bulma runs into him in her search for a set of magical objects called the \"Dragon Balls\". The artifacts are said to grant one wish to whoever collects all seven.</string>
    <string name="fairy_tail_description">Across the Fiore kingdom, wizards join guilds and make their pay by filling magical needs—but one guild has a reputation as the roughest, rowdiest, most dangerous of all: Fairy Tail!</string>
    <string name="one_punch_man_description">Saitama has a rather peculiar hobby, being a superhero, but despite his heroic deeds and superhuman abilities, a shadow looms over his life. He\'s become much too powerful, to the point that every opponent ends up defeated with a single punch.</string>
    <string name="hunter_x_hunter_description">A Hunter is one who travels the world doing all sorts of dangerous tasks. From capturing criminals to searching deep within uncharted lands for any lost treasures. Gon is a young boy whose father disappeared long ago, being a Hunter.</string>
    <string name="tokyo_ghoul_description">The suspense horror/dark fantasy story is set in Tokyo, which is haunted by mysterious \"ghouls\" who are devouring humans. People are gripped by the fear of these ghouls whose identities are masked in mystery.</string>
    <string name="death_note_description">Light Yagami is a genius high school student who is about to learn about life through a book of death. When a bored shinigami, a God of Death, drops a black notepad called a Death Note, Light receives power over life and death with the stroke of a pen.</string>
    <string name="attack_on_titan_description">Several hundred years ago, humans were nearly exterminated by titans. Titans are typically several stories tall, seem to have no intelligence, devour human beings and, worst of all, seem to do it for the pleasure rather than as a food source.</string>
</resources>